# ephemera-ai

./: .env  .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  compose.yaml  devenv.nix  flake.nix  nixfmt-all.sh  pnpm-lock.yaml  pnpm-workspace.yaml  run-integration-test.sh
aisthesis/agora-client/: Cargo.toml
aisthesis/agora-client/src/: lib.rs
aisthesis/heralds/atrium-herald/: Cargo.toml
aisthesis/heralds/atrium-herald/src/: config.rs
aisthesis/heralds/timer/: Cargo.toml
aisthesis/heralds/timer/src/: main.rs  scheduler.rs
aisthesis/kairos-cli/: Cargo.toml
aisthesis/kairos-cli/src/: main.rs
aisthesis/kairos-client/: Cargo.toml
aisthesis/kairos-client/src/: client.rs
crates/agora/: Cargo.toml
crates/agora-client/: Cargo.toml
crates/agora-client/src/: client.rs  lib.rs  mock.rs  trait_def.rs
crates/agora/src/: server.rs
crates/agora/src/config/: mod.rs  schema.rs
crates/agora/src/event/: types.rs
crates/agora/src/handlers/: events.rs  heralds.rs  mod.rs
crates/agora/src/herald/: mod.rs  types.rs
crates/agora/src/queue/: memory.rs  mod.rs  sqlite.rs  state.rs
crates/chronikos/kairos/: Cargo.toml
crates/chronikos/kairos-cli/: Cargo.toml
crates/chronikos/kairos-cli/src/: main.rs
crates/chronikos/kairos-client/: Cargo.toml
crates/chronikos/kairos-client/src/: client.rs  lib.rs
crates/chronikos/kairos-herald/: Cargo.toml
crates/chronikos/kairos-herald/src/: config.rs  main.rs
crates/chronikos/kairos/src/: lib.rs  main.rs  scheduler.rs  server.rs  store.rs
crates/dialogue/atrium-cli/: Cargo.toml
crates/dialogue/atrium-cli/src/: config.rs  main.rs
crates/dialogue/atrium-client/: Cargo.toml
crates/dialogue/atrium-client/src/: lib.rs
crates/dialogue/atrium-herald/: Cargo.toml  config.example.json
crates/dialogue/atrium-herald/src/: main.rs  poller.rs
crates/epha-agent/: Cargo.toml
crates/epha-agent/docs/: README.md  architecture-core.md  architecture-design.md  architecture-developer-quickstart.md  architecture-executive-summary.md  architecture-observability.md  architecture-phases.md  architecture.md
crates/epha-agent/src/context/: mod.rs
crates/epha-agent/src/tools/: agent_tool.rs  mod.rs
crates/epha-ai/: Cargo.toml
crates/epha-ai/prompts/: integration-test-append.md
crates/epha-ai/src/: main.rs
crates/epha-ai/src/agent/: epha_ai.rs  grounding.md  grounding_prompt.rs  mod.rs  state.rs
crates/epha-ai/src/config/: mod.rs  schema.rs
crates/epha-ai/src/context/: ephemera_context.rs  error.rs  memory_constructors.rs  memory_content.rs  memory_fragment_list.rs  memory_observability.rs  mod.rs
crates/epha-ai/src/sync/: loom_sync.rs  mod.rs
crates/epha-ai/src/tools/: agent_tool.rs  context_evict.rs  dispatch.rs  memory.rs  mod.rs  state_machine.rs
crates/epha-boot/: Cargo.toml
crates/epha-boot/src/: main.rs
crates/epha-boot/src/commands/: history.rs  init.rs  status.rs  switch.rs
crates/epha-ctl/: Cargo.toml
crates/epha-ctl/src/: main.rs
dialogue/atrium/: Cargo.toml
dialogue/atrium-cli/: Cargo.toml
dialogue/atrium-cli/src/: auth_cli.rs  commands.rs  interface.rs  main.rs  mod.rs
dialogue/atrium-client/: Cargo.toml
dialogue/atrium-client/src/: auth.rs  client.rs  lib.rs
dialogue/atrium-client/src/client/: authenticated_client.rs  raw_client.rs
dialogue/atrium/src/: main.rs
dialogue/atrium/src/db/: mod.rs  mysql_manager.rs  user_manager.rs
dialogue/atrium/src/entity/: mod.rs  user.rs
dialogue/atrium/src/handlers/: heartbeat.rs  message.rs  user.rs
dialogue/atrium/src/migration/: m20251007_01_create_dialogue_tables.rs
dialogue/atrium/src/models/: message.rs  mod.rs  user.rs
dialogue/atrium/tests/: api_integration.rs
epha-agent/: Cargo.toml
epha-agent/src/: lib.rs
epha-agent/src/context/: mod.rs
epha-agent/src/publisher/: error.rs  message.rs  mod.rs  trait.rs
epha-agent/src/state_machine/: mod.rs  state.rs  state_loader.rs  state_machine.rs  traits.rs
epha-agent/src/subscriber/: error.rs  manager.rs  mod.rs  types.rs
epha-agent/src/tools/: mod.rs
epha-agent/src/tools/file_system/: list.rs  write.rs
epha-agent/src/tools/shell/: bash.rs  capture_output.rs  error.rs  mock_backend.rs
epha-agent/src/tools/subscription/: info.rs  list.rs  mod.rs  (+2 more)
epha-ai/: Cargo.toml
epha-ai/prompts/: common.md
epha-ai/prompts/states/: output.md  perception.md  reasoning.md  recall.md
epha-ai/src/: db_test.rs  main.rs
epha-ai/src/agent/: common_prompt.rs  context.rs  context_data.rs  epha_ai.rs  mod.rs  state_machine_executor.rs
epha-ai/src/config/: mod.rs  schema.rs
epha-ai/src/context/: ephemera_context.rs  memory_constructors.rs  memory_fragment_list.rs  mod.rs
epha-ai/src/ephemera/: ephemera.rs
epha-ai/src/interface/: cli.rs
epha-ai/src/tools/: dialogue.rs  memory.rs  mod.rs  state_machine.rs
epha-boot/: Cargo.toml
epha-boot/src/: cli.rs  config.rs  shell.rs
epha-boot/src/commands/: build.rs  mod.rs  rollback.rs  update.rs
epha-memory/: Cargo.toml
epha-memory/src/: builder.rs  lib.rs  types.rs
epha-memory/src/entity/: memory.rs
epha-memory/src/manager/: hybrid_manager.rs  mod.rs  mysql_manager.rs
epha-memory/src/migration/: m20251019_01_redesign_memory_source.rs  mod.rs
ephemera-ai/: Cargo.toml
ephemera-ai/src/: db_test.rs  main.rs
ephemera-ai/src/ephemera/: ephemera.rs  mod.rs  tool_add.rs
ephemera-ai/src/interface/: cli.rs  mod.rs
ephemera-memory/: Cargo.toml
ephemera-memory/src/: lib.rs  types.rs
ephemera-memory/src/entity/: memory.rs
ephemera-memory/src/manager/: hybrid_manager.rs  manager.rs  mod.rs  mysql_manager.rs  qdrant_manager.rs
ephemera-memory/src/migration/: m20251004_01_create_memory_fragments_table.rs
psyche/loom/: Cargo.toml
psyche/loom-client/: Cargo.toml
psyche/loom-client/src/: client.rs  lib.rs  memory.rs  system_configs.rs
psyche/loom/src/: lib.rs  main.rs  server.rs
psyche/loom/tests/: entity_test.rs  hybrid_manager_test.rs  memory_format_test.rs  memory_manager_test.rs  models_test.rs  mysql_manager_test.rs  testcontainers_test.rs
(+294 files in other folders)
