[workspace]
members = [
    "crates/epha-ai",
    "crates/epha-agent",
    "crates/epha-boot",

    "crates/agora",
    "crates/agora-client",

    "crates/chronikos/kairos",
    "crates/chronikos/kairos-client",
    "crates/chronikos/kairos-cli",
    "crates/chronikos/kairos-herald",

    "crates/psyche/loom",
    "crates/psyche/loom-client",
    # "crates/psyche/loom-vector",

    "crates/dialogue/atrium",
    "crates/dialogue/atrium-client",
    "crates/dialogue/atrium-cli",
    "crates/dialogue/atrium-herald",
]

resolver = "3"
