[package]
name = "epha-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rig-core = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }