[package]
name = "epha-ai"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "db_test"
path = "src/db_test.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
time = "0.3"
rig-core = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
log = "0.4"

epha-agent = { path = "../epha-agent" }
epha-memory = { path = "../epha-memory" }
dotenv = "0.15"

# Database dependencies for testing
qdrant-client = { version = "1.15" }
sea-orm = { version = "1.1", features = ["runtime-tokio", "sqlx-mysql"] }
sea-orm-migration = "1.1"
serde_yaml = "0.9.34"
