[package]
name = "epha-boot"
version = "0.1.0"
edition = "2024"
description = "Deployment CLI for Ephemera AI services"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
