[package]
name = "ephemera-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
# meilisearch-sdk = "0.28.0"
rmcp = { version = "0.1", features = ["server", "transport-sse-server"] }
sea-orm = { version = "1.1", features = ["debug-print", "runtime-tokio", "sqlx-mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
qdrant-client = { version = "1.15" }
