[package]
name = "agora-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Agora event hub"

[dependencies]
# Agora server dependency for shared types
agora = { path = "../agora" }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting"] }
