[package]
name = "agora-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Agora event hub"

[dependencies]
# Agora server dependency for shared types
agora = { path = "../agora" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
