[package]
name = "agora-client"
description = "Client library for Agora event hub"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
# Agora server dependency for shared types
agora-common = { path = "../agora-common" }

async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
