[package]
name = "agora"
description = "Event hub for Ephemera AI"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
agora-common = { path = "../agora-common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP service dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }

# Database
sqlx = { workspace = true }
