[package]
name = "epha-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
serde_yaml = "0.9"
tracing-subscriber = { workspace = true }

# File system tools dependencies
regex = "1"
glob = "0.3"

# Shell tools dependencies
tmux_interface = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
