[package]
name = "epha-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
llm = { workspace = true, features = ["groq"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
serde_yaml = { workspace = true }
tracing-subscriber = { workspace = true }

# File system tools dependencies
regex = { workspace = true }
glob = { workspace = true }

# Shell tools dependencies
tmux_interface = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
