[package]
name = "epha-ai"
description = "Main application binary for Ephemera AI"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
llm = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

serde_yaml = { workspace = true }
regex = { workspace = true }
tmux_interface = { workspace = true }

loom-client = { path = "../psyche/loom-client" }
atrium-client = { path = "../dialogue/atrium-client" }
agora-client = { path = "../agora-client" }
agora-common = { path = "../agora-common" }
clap = { workspace = true }
uuid = { workspace = true }
tokenx-rs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
