[package]
name = "epha-boot"
version = "0.1.0"
edition = "2024"
description = "Deployment CLI for Ephemera AI services"
license = "MIT"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
