[package]
name = "epha-ctl"
description = "CLI for Ephemera AI"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
