[package]
name = "atrium-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Dialogue Atrium chat system"

[dependencies]
atrium-client = { path = "../atrium-client" }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"