[package]
name = "kairos-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Kairos time management service"

[dependencies]
kairos-client = { path = "../kairos-client" }

anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
