[package]
name = "kairos-cli"
description = "CLI client for Kairos time management service"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
kairos-client = { path = "../kairos-client" }

anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
