[package]
name = "kairos-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Kairos time management service"

[dependencies]
# Kairos server dependency for shared types
kairos = { path = "../kairos" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
