[package]
name = "kairos-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Kairos time management service"

[dependencies]
# Shared schedule types
kairos-common = { path = "../kairos-common" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
