[package]
name = "kairos-client"
description = "Client library for Kairos time management service"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
# Shared schedule types
kairos-common = { path = "../kairos-common" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
