[package]
name = "kairos-herald"
version = "0.1.0"
edition = "2024"
description = "Bridge service between Kairos and Agora - pushes triggered schedules to the event hub"

[dependencies]
agora-client = { path = "../../agora-client" }
kairos-client = { path = "../kairos-client" }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
