[package]
name = "kairos-herald"
description = "Bridge service between Kairos and Agora - pushes triggered schedules to the event hub"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
agora-client = { path = "../../agora-client" }
kairos-client = { path = "../kairos-client" }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
