[package]
name = "kairos"
version = "0.1.0"
edition = "2024"
description = "Time management service for Ephemera AI - the brain of time"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP service dependencies
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4.0", features = ["derive"] }

# SQLite storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
