[package]
name = "kairos"
description = "Time management service for Ephemera AI - the brain of time"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
kairos-common = { path = "../kairos-common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# HTTP service dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }

# SQLite storage
sqlx = { workspace = true }
