[package]
name = "atrium-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for Dialogue Atrium chat system"

[dependencies]
atrium-client = { path = "../atrium-client" }

anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
