[package]
name = "atrium-cli"
description = "CLI client for Dialogue Atrium chat system"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
atrium-client = { path = "../atrium-client" }

anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
