[package]
name = "atrium-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Dialogue Atrium chat system"

[dependencies]
# Atrium server dependency for shared types
atrium = { path = "../atrium" }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
rpassword = "7.3"
urlencoding = "2.1"