[package]
name = "atrium-client"
version = "0.1.0"
edition = "2024"
description = "Client library for Dialogue Atrium chat system"

[dependencies]
# Atrium server dependency for shared types
atrium = { path = "../atrium" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rpassword = "7.3"
urlencoding = "2.1"
