[package]
name = "atrium-client"
description = "Client library for Dialogue Atrium chat system"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
atrium-common = { path = "../atrium-common" }

reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rpassword = { workspace = true }
urlencoding = { workspace = true }
