[package]
name = "atrium-herald"
version = "0.1.0"
edition = "2024"
description = "Atrium herald for Agora event hub"

[dependencies]
atrium-client = { path = "../atrium-client" }

anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
