[package]
name = "atrium-herald"
description = "Atrium herald for Agora event hub"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
atrium-client = { path = "../atrium-client" }

anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
time = { workspace = true }
